--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "axios": "^1.7.4",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
+    "react-datetime-picker": "^6.0.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
