--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,15 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.0.1",
+    "@mui/material": "^6.0.1",
+    "@mui/styled-engine-sc": "^6.0.1",
     "axios": "^1.7.4",
+    "date-fns": "^3.6.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-datetime-picker": "^6.0.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
-    "react-time-picker": "^7.0.0",
     "react-toastify": "^10.0.5",
+    "styled-components": "^6.1.13",
     "web-vitals": "^4.2.3"
   },
   "scripts": {
