--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^1.7.4",
+    "mdb-ui-kit": "^7.3.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-datetime-picker": "^6.0.1",
