--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@mui/styled-engine-sc": "^6.0.1",
     "axios": "^1.7.4",
     "date-fns": "^3.6.0",
+    "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-datetime-picker": "^6.0.1",
@@ -18,7 +19,8 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
     "styled-components": "^6.1.13",
-    "web-vitals": "^4.2.3"
+    "web-vitals": "^4.2.3",
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
